--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rajdhani"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
